tests/invalid/div_zero.turtle
let x = 10 / 0
move x